commit the selection of books add the talking librarian 1